fix: fixed margins and white background on mobile

--- a/assets/css/templatemo-cyborg-gaming.css
+++ b/assets/css/templatemo-cyborg-gaming.css
@@ -656,7 +656,6 @@ Header Style
     width: 100%;
   }
   .header-area {
-    background-color: #f7f7f7;
     padding: 0px 15px;
     height: 80px;
     box-shadow: none;
@@ -1291,7 +1290,7 @@ Game Details Style
 .game-details h2 {
   font-size: 45px;
   text-transform: uppercase;
-  margin: 60px 0px;
+  margin: 30px 0px;
 }
 
 .game-details .content {
@@ -1633,7 +1632,7 @@ body {
 
 @media (max-width: 767px) {
   body .page-content {
-    padding: 0px 30px;
+    padding: 30px;
   }
   .main-banner {
     text-align: center;
@@ -1721,5 +1720,10 @@ body {
   }
   .gaming-library .item ul li {
     width: 16%;
+  }
+
+  .game-details h2 {
+    font-size: 24px;
+    margin: 24px 0px;
   }
 }
